Document PPDG/src/objects/EBS_Relationship__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Type__c</fullName>
        <label>Relationship Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <label>Text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>EBS Relationship</label>
</CustomObject>